# lime

./: eval.py  grader.py  main.py  pyproject.toml  readme.md  requirements.txt  setup.py
books/: agg-prototype-3.ipynb  agg-prototype-4.ipynb  agg-prototype-5.ipynb
eval-pipeline-1/: readme.md  requirements.txt
lime/: agg.py  check.py  eval.py  grader.py  init.py  main.py
lime/books/: agg-prototype-2.ipynb  agg-prototype-3.ipynb
lime/commands/: agg.py  check.py  eval.py  grade.py  initialize.py  render.py
lime/common/controllers/: config_parse.py  parse.py
lime/common/grading/: base.py  fuzzy.py
lime/common/inference/: api_anthropic.py  api_openai.py  base.py  cpl_client.py  cpl_server.py  interface.py  local_llama_cpp.py
lime/common/models/: config.py  errs.py  state.py
lime/data/: sheet-example.md
lime/data/config_model/: template.yaml
lime/modules/: local_llm_api.py  oai_api.py
lime/modules/agg/: collect.py
lime/modules/controllers/: parse.py
lime/modules/grading/: base.py
lime/modules/inference/: base.py  cpl_client.py  cpl_server.py  interface.py  local_cpp.py  local_deprecated.py  oai_api.py
lime/modules/models/: errs.py  internal.py  utils.py
lime/scripts/: agg.bat
lime/tests/: pytest.ini  test_eval.py  test_grading.py  test_local_llm_api.py  test_local_model_slow.py  test_parse.py
modules/: local_llm_api.py  parse.py
modules/models/: config.py  state.py
scripts/: beta.bat
tests/: pytest.ini  test_config_loader.py  test_eval.py  test_eval_params.py  test_grading.py  test_local_llm_api.py  test_local_model_slow.py  test_model_params.py  test_parse.py
tests/data/: input-five.md  input-four.md  input-three.md  input-two.md
tests/data/model_cfg/: config-1.yaml  config-2.yaml  config-3.yaml  input-mix-params.md  input-question-params.md  input-sheet-params.md
tests/data/stubs/: completion.json  config-toy-1.yaml  config-toy-2.yaml
tests/deprecated/: dep_eval.py  dep_local_model_slow.py  dep_parse.py
(+13 files in other folders)
