[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lime-green"
version = "0.1.0"
authors = [
  { name="Will Sutton", email="wsutton17@gmail.com" },
]
description = "A cli based micro-framework for LLM evals"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML~=6.0.1",
    "python-dotenv~=1.0.0",
    "tabulate~=0.9.0",
    "pydantic~=2.5.3",
    "pandas>=2.0.0",
    "openai>=1.5.0",
    "tiktoken>=0.5.0",
    "flask>=3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/sutt/lime"
homepage = "https://github.com/sutt/lime"


[project.scripts]
lime = "lime.main:main"

[project.optional-dependencies]
dev = ["pytest", "jupyter", "llama_cpp_python>=0.2.31"]
llama_cpp = ["llama_cpp_python>=0.2.31"]